tests/input/semantic_errors/incompatibleTypes1.c
#include <sdsdfdsf.h> // IS AGAIN VALID??
int main(){
    int x;
    x = 5 + 'a';
    x = 5 - 'a';
    x = 5 * 'a';
    x = 5 / 'a';
}

